--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "angular": "1.2.8",
     "bootstrap": "3.1.1",
     "jquery": "2.1.0",
-    "font-awesome": "4.0.3"
+    "font-awesome": "4.0.3",
+    "jquery-ui": "1.10.4"
   }
 }
